[metadata]
name = intellicrack
version = 0.1.0
author = Zachary Flint
author_email = zach.flint2@gmail.com
description = Intellicrack: Advanced Binary Analysis and Security Research Framework with AI-driven capabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zacharyflint/intellicrack
project_urls =
    Bug Tracker = https://github.com/zacharyflint/intellicrack/issues
    Documentation = https://intellicrack.readthedocs.io
    Source Code = https://github.com/zacharyflint/intellicrack
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Security
    Topic :: Software Development :: Disassemblers
    Topic :: Software Development :: Debuggers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Environment :: Console
    Environment :: X11 Applications :: Qt

[options]
packages = find:
python_requires = >=3.10,<3.14
install_requires = file: requirements.txt
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*
    docs
    docs.*

[options.entry_points]
console_scripts =
    intellicrack = intellicrack.main:main
    intellicrack-cli = intellicrack.scripts.run_analysis_cli:main

gui_scripts =
    intellicrack-gui = intellicrack.ui.main_app:launch

[options.package_data]
intellicrack =
    assets/*
    data/signatures/*
    data/templates/*
    plugins/custom_modules/*.py
    models/*.pkl
    models/*.joblib
    config/*.json